--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="index.html"><img src="img/m2.png" style="width: 64px;height: 64px;" alt="logo"></a>
       <ul class="nav nav-collapse pull-right">
         <li><a href="index.html" class="active"><i class="icon-home-outline"></i> Home</a></li>
-        <li><a href="#.html"><i class="icon-doc-text"></i> Blogs</a></li>
+        <li><a href="http://linuxgeek0.blogspot.com/"><i class="icon-doc-text"></i> Blogs</a></li>
         <li><a href="resume.html"><i class="icon-trophy"></i> Projects</a></li>
         <li><a href="#.html"><i class="icon-user-1"></i> About</a></li>
       <div class="nav-collapse collapse"></div>
