--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a class="smoothscroll" href="#contact">Blog</a></li> 
+            <li><a href="http://www.linuxgeek0.com/">Blog</a></li> 
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -116,7 +116,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="my_resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -692,6 +692,10 @@ making abilities. Extremely well versed in public relations and motivated to wor
       </div>
 
    </section> <!-- Contact Section End-->
+    
+<script src="http://www.emailmeform.com/builder/forms/jsform/9670dB06070X0z9Y" type="text/javascript"></script>
+<div style="margin-top:18px;text-align:center"><div id='emf_advertisement'><font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTM0" /></span><font face="Verdana" size="2" color="#000000">EMF </font><a style="text-decoration:none;" href="http://www.emailmeform.com/" target="_blank"><font face="Verdana" size="2" color="#000000">Online Order Form</font></a></div></div>
+
 
 
    <!-- footer
