--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a href="http://www.linuxgeek0.com/">Blog</a></li> 
-            <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -88,7 +87,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/profilepic.JPG" alt="" />
 
          </div>
 
@@ -108,8 +107,9 @@ making abilities. Extremely well versed in public relations and motivated to wor
 						   <span>Ravshanbek Norboev</span><br>
 						   <span>Houston TX
                      </span><br>
-						   <span>(713)517-4286</span><br>
-                     <span>rnorboev.com</span>
+						   <span><i class="fa fa-phone"></i>  (713) 517-4286</span><br>
+                      <span><i class="fa fa-envelope" aria-hidden="true"></i> norboevr@gmail.com</span><br>
+                     <span><i class="fa fa-globe" aria-hidden="true"></i> rnorboev.com</span>
 					   </p>
 
                </div>
@@ -605,7 +605,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
 
    <!-- Contact Section
-   ================================================== -->
+   ================================================== 
    <section id="contact">
 
          <div class="row section-head">
@@ -629,7 +629,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
             <div class="eight columns">
 
-               <!-- form -->
+               <!-- form 
                <form action="" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
@@ -661,11 +661,10 @@ making abilities. Extremely well versed in public relations and motivated to wor
                   </div>
 
 					</fieldset>
-				   </form> <!-- Form End -->
-
-               <!-- contact-warning -->
+				   </form> <!-- Form End 
+               <!-- contact-warning 
                <div id="message-warning"> Error boy</div>
-               <!-- contact-success -->
+               <!-- contact-success 
 				   <div id="message-success">
                   <i class="fa fa-check"></i>Your message was sent, thank you!<br>
 				   </div>
@@ -693,8 +692,6 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
    </section> <!-- Contact Section End-->
     
-<script src="http://www.emailmeform.com/builder/forms/jsform/9670dB06070X0z9Y" type="text/javascript"></script>
-<div style="margin-top:18px;text-align:center"><div id='emf_advertisement'><font face="Verdana" size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTM0" /></span><font face="Verdana" size="2" color="#000000">EMF </font><a style="text-decoration:none;" href="http://www.emailmeform.com/" target="_blank"><font face="Verdana" size="2" color="#000000">Online Order Form</font></a></div></div>
 
 
 
