--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ making abilities. Extremely well versed in public relations and motivated to wor
 						   <span>Ravshanbek Norboev</span><br>
 						   <span>Houston TX
                      </span><br>
-						   <span><i class="fa fa-phone"></i>  (713) 517-4286</span><br>
-                      <span><i class="fa fa-envelope" aria-hidden="true"></i> norboevr@gmail.com</span><br>
+						   <span><i class="fa fa-phone"></i></span><br>
+                      <span><i class="fa fa-envelope" aria-hidden="true"></i></span><br>
                      <span><i class="fa fa-globe" aria-hidden="true"></i> rnorboev.com</span>
 					   </p>
 
