--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a href="https://rnorboev.blogspot.com">Blog</a></li> 
+            <li><a href="http://www.linuxgeek0.com">Blog</a></li> 
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
