--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
                   <p>
                       
-                 I am doing my Bachelor in Computer Science with the concentrations in Computer Engineering and Computer Networks. I have a plan to do my masters related to Cyber Security.
+                 I am done my Bachelor in Computer Science with the concentrations in Computer Engineering and Computer Networks. I have a plan to do my masters related to Cyber Security.
                   </p>
 
                </div>
@@ -175,6 +175,24 @@ making abilities. Extremely well versed in public relations and motivated to wor
          </div>
 
          <div class="nine columns main-col">
+         	<div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>BINYOD</h3>
+                  <p class="info">SOFTWARE ENGINEER<span>&bull;</span> <em class="date">January 2017 - Present</em></p>
+
+                  <p>
+                       * Implementing security of the firewalls<br>
+                       * Content filtering<br>
+                       * Working on network management: AD, DNS, DHCP<br>
+                       * Configuring NAT/PAT, VPN Tunnel, BGP, IPSec<br>
+                       * Configuring Internet protocols: RIP2, OSPF, EIGRP<br>
+                  </p>
+
+               </div>
+
+            </div>
 
             <div class="row item">
 
