--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
             <h2>About Me</h2>
 
-            <p>My name is Ravshanbek Norboev. I am currently a senior attending North American University. I am double major Computer Engineering and Computer Networking. I enjoy taking complex problems and solving them. I also love the logic and structure of coding and always try to write elegant and efficient code, whether it be Java, Python, PHP.
+            <p>My name is Ravshanbek Norboev. I am currently working as a software engineer in Binyod. I am double major Computer Engineering and Computer Networking. I enjoy taking complex problems and solving them. I also love the logic and structure of coding and always try to write elegant and efficient code, whether it be Java, Python, PHP.
             </p>
 
             <div class="row">
