--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
-            <li><a href="https://linuxmastergeek.blogspot.com/">Blog</a></li> 
+            <li><a href="https://www.linuxmastergeek.com/" target="_blank">Blog</a></li> 
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Ravshanbek Norboev</h1>
-            <h3>I'm Ravshanbek Norboev, curious about new technology.  Majoring in <span>Computer Networking</span>, <span>Software Engineering</span> and <span>Cyber Security</span> by creating new ideas and new projects. Committed to providing high quality service; quick learner with superb decision
+            <h3>I'm Ravshanbek Norboev, curious about new technology.  Majored in <span>Computer Networking</span>, <span>Software Engineering</span> and <span>Cyber Security</span> by creating new ideas and new projects. Committed to providing high quality service; quick learner with superb decision
 making abilities. Extremely well versed in public relations and motivated to work.
             Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
@@ -67,6 +67,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                 <li><a href="https://github.com/rnorboev" target="_blank"><i class="fa fa-github"></i></a></li>
                <li><a href="https://www.facebook.com/rnorboev" target="_blank"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/norboevr" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.linuxmastergeek.com/" target="_blank"><i class="fa fa-pencil"></i></a></li>
                <li><a href="https://www.youtube.com/c/LINUXGEEK" target="_blank"><i class="fa fa-youtube"></i></a></li>
             </ul>
          </div>
@@ -175,6 +176,27 @@ making abilities. Extremely well versed in public relations and motivated to wor
          </div>
 
          <div class="nine columns main-col">
+
+<div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Harmony School of Excellence</h3>
+                  <p class="info">IT Network Manager<span>&bull;</span> <em class="date">August 2018 - Present</em></p>
+
+                  <p>
+                       * Administration and support of network and IT systems.<br>
+                       * Manage domain system and user accounts with Windows Server2012.<br>
+                       * Solve any issue related to technology in the school.<br>
+                       * Develop and update the website<br>
+                  </p>
+
+               </div>
+
+            </div>
+
+
+
          	<div class="row item">
 
                <div class="twelve columns">
@@ -183,11 +205,11 @@ making abilities. Extremely well versed in public relations and motivated to wor
                   <p class="info">SOFTWARE ENGINEER<span>&bull;</span> <em class="date">January 2017 - Present</em></p>
 
                   <p>
-                       * Implementing security of the firewalls<br>
-                       * Content filtering<br>
-                       * Working on network management: AD, DNS, DHCP<br>
-                       * Configuring NAT/PAT, VPN Tunnel, BGP, IPSec<br>
-                       * Configuring Internet protocols: RIP2, OSPF, EIGRP<br>
+                       * Configured NAT/PAT, VPN Tunnel, BGP, IPSec<br>
+                       * Routing Configuring RIP2, OSPF, EIGRP<br>
+                       * Network Management: AD, DNS, DHCP, VLANs<br>
+                       * Used Python to build firewall for websites<br>
+                       * Maintained the website of the company using PHP, Javascript.
                   </p>
 
                </div>
@@ -245,10 +267,10 @@ making abilities. Extremely well versed in public relations and motivated to wor
 				<div class="bars">
 
 				   <ul class="skills">
-                       <li><span class="bar-expand css"></span><em>JAVA</em></li>
-                       <li><span class="bar-expand html5"></span><em>Python</em></li>
+                       <li><span class="bar-expand css"></span><em>Python</em></li>
+                       <li><span class="bar-expand html5"></span><em>Ethical Hacking</em></li>
 					   <li><span class="bar-expand photoshop"></span><em>Linux Admin</em></li>
-                       <li><span class="bar-expand photoshop"></span><em>Cyber Security Tools</em></li>
+                       <li><span class="bar-expand photoshop"></span><em>Cyber Security Specialist</em></li>
                   <li><span class="bar-expand illustrator"></span><em>Web programming</em></li>
 						<li><span class="bar-expand wordpress"></span><em>Android Development</em></li>
                        <li><span class="bar-expand html5"></span><em>networking</em></li>
@@ -264,7 +286,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
 <!-- Projects Part
    <!-- Portfolio Section
-   ==================================================
+   ================================================== -->
    <section id="portfolio">
 
       <div class="row">
@@ -273,7 +295,6 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
             <h1>Check Out Some of My Projects.</h1>
 
-            <!-- portfolio-wrapper 
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
           	   <div class="columns portfolio-item">
@@ -291,8 +312,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
-
+          		</div> 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -308,7 +328,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
+          		</div> 
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -325,8 +345,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
-
+          		</div> 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -342,7 +361,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
+          		</div> 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -358,8 +377,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
-
+          		</div> 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -375,7 +393,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
+          		</div>
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -392,8 +410,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div> <!-- item end 
-
+          		</div> 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -409,15 +426,13 @@ making abilities. Extremely well versed in public relations and motivated to wor
                      </a>
 
                   </div>
-          		</div>  <!-- item end
+          		</div>  
 
-            </div> <!-- portfolio-wrapper end 
+            </div> 
+         </div> 
 
-         </div> <!-- twelve columns end 
 
 
-         <!-- Modal Popup
-	      --------------------------------------------------------------- 
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
@@ -425,7 +440,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
 		      <div class="description-box">
 			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bdsdasdsa dsajkdkjs djks kdsa dasdjsbd skd sa das djasbd asdbjas das d asd as dasdasd skdbasndsajdlsodashdashdkahdkas dhaskdhsdhsa kdaskdbsad shdasdksdsdgs dshsh dsbdashdsduoa dhabdkandhauidd dkduiashdiadjasjd sdasuidhasuidhasuid idasuibdbadisa dsndasdia dahd andasidhwjhw ra rajroiashdio sodnshu rwbajdbsjhdu gwadjs dushauidasdbsu 7aheibiuwgienas dsuiahdwui dsjdiahduia hdiasdsji dh8wuwgeraj dsoajdisgdusadi sdisabdi d asid sa gdipas gduiasg dipasgduigasyuidgasuidg asg dyuas gdyuias gdyua gduiyga dygasyudg asyudg ayug diabrwigbwreuiabiudasb diuabdrgwauidbasuidbuiasbdiasdb8oauibxauidbibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
 		      </div>
 
@@ -434,7 +449,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-01 End 
+	      </div>
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
@@ -451,8 +466,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-02 End
-
+	      </div>
          <div id="modal-03" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
@@ -468,7 +482,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-03 End 
+	      </div>
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
@@ -485,7 +499,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-04 End 
+	      </div>
 
          <div id="modal-05" class="popup-modal mfp-hide">
 
@@ -502,7 +516,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-05 End 
+	      </div>
 
          <div id="modal-06" class="popup-modal mfp-hide">
 
@@ -519,7 +533,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-06 End 
+	      </div>
 
          <div id="modal-07" class="popup-modal mfp-hide">
 
@@ -536,7 +550,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-07 End 
+	      </div>
 
          <div id="modal-08" class="popup-modal mfp-hide">
 
@@ -553,10 +567,9 @@ making abilities. Extremely well versed in public relations and motivated to wor
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-01 End 
+	      </div>
 
-
-      </div> <!-- row End 
+      </div> 
 
    </section> <!-- Portfolio Section End
 -->
@@ -726,12 +739,13 @@ making abilities. Extremely well versed in public relations and motivated to wor
                 <li><a href="https://github.com/rnorboev" target="_blank"><i class="fa fa-github"></i></a></li>
                <li><a href="https://www.facebook.com/rnorboev" target="_blank"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/norboevr" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="https://www.linuxmastergeek.com/" target="_blank"><i class="fa fa-pencil"></i></a></li>
                <li><a href="https://www.youtube.com/c/LINUXGEEK" target="_blank"><i class="fa fa-youtube"></i></a></li>
             </ul>
 
             <ul class="copyright">
                <li>&copy; Copyright 2017 Ravshanbek</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>Designed with &#9829;</li>   
             </ul>
 
          </div>
