--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
             <h2>About Me</h2>
 
-            <p>My name is Ravshanbek Norboev. I am currently working as a software engineer in Binyod. I am double major Software Engineering and Computer Networking. I enjoy taking complex problems and solving them. I also love the logic and structure of coding and always try to write elegant and efficient code, whether it be Java, Python, PHP.
+            <p>My name is Ravshanbek Norboev. I am double major Software Engineering and Computer Networking and working on my third major Cyber Security. I enjoy taking complex problems and solving them. I also love the logic and structure of coding and always try to write elegant and efficient code, whether it be Java, Python, PHP. I am also love to learn about new technology and how I can make more secure. My interest are working on Cyber Security is solving advance problems, and come up with perfect protection.
             </p>
 
             <div class="row">
@@ -111,6 +111,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 						   <span><i class="fa fa-phone"></i></span><br>
                       <span><i class="fa fa-envelope" aria-hidden="true"></i></span><br>
                      <span><i class="fa fa-globe" aria-hidden="true"></i> rnorboev.com</span>
+
 					   </p>
 
                </div>
@@ -189,6 +190,8 @@ making abilities. Extremely well versed in public relations and motivated to wor
                        * Manage domain system and user accounts with Windows Server2012.<br>
                        * Solve any issue related to technology in the school.<br>
                        * Develop and update the website<br>
+                       * Managing the ticketing system<br>
+                       * Network monitoring and securing the network<br>
                   </p>
 
                </div>
@@ -202,14 +205,16 @@ making abilities. Extremely well versed in public relations and motivated to wor
                <div class="twelve columns">
 
                   <h3>BINYOD</h3>
-                  <p class="info">SOFTWARE ENGINEER<span>&bull;</span> <em class="date">January 2017 - Present</em></p>
+                  <p class="info">SOFTWARE ENGINEER<span>&bull;</span> <em class="date">January 2017 - August 2018</em></p>
 
                   <p>
                        * Configured NAT/PAT, VPN Tunnel, BGP, IPSec<br>
                        * Routing Configuring RIP2, OSPF, EIGRP<br>
                        * Network Management: AD, DNS, DHCP, VLANs<br>
                        * Used Python to build firewall for websites<br>
-                       * Maintained the website of the company using PHP, Javascript.
+                       * Maintained the website of the company using PHP, Javascript.<br>
+                       * Worked on open source firewall "PfSense"<br>
+                       * Learned more and got experience on monitoring and analyzing network tools: Splunk, Fortinet, PaloAlto<br>
                   </p>
 
                </div>
@@ -286,7 +291,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
 
 <!-- Projects Part
    <!-- Portfolio Section
-   ================================================== -->
+   ================================================== 
    <section id="portfolio">
 
       <div class="row">
@@ -744,7 +749,7 @@ making abilities. Extremely well versed in public relations and motivated to wor
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2017 Ravshanbek</li>
+               <li>&copy; Copyright 2019 Ravshanbek</li>
                <li>Designed with &#9829;</li>   
             </ul>
 
